pkg/provider/kubernetes/ingress-nginx/fixtures/ingresses/ingress-with-rewrite-target-no-regex.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-with-rewrite-target-no-regex
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /rewritten

spec:
  ingressClassName: nginx
  rules:
    - host: rewrite-target-no-regex.localhost
      http:
        paths:
          - path: /original
            pathType: Exact
            backend:
              service:
                name: whoami
                port:
                  number: 80
